# qt-raytracer

./: .clang-format  .gitignore  CMakeLists.txt  CudaPathTracerKernel.cu  MainWindow.cpp  README.md  RayTracerFboItem.cpp  RayTracerFboItem.h  RenderWidget.h  VulkanPathTracerSpv.h  main.cpp
.github/workflows/: ci.yml  coverage.yml
docs/: ARCHITECTURE.md  BUILDING.md  CODE_REVIEW.md  DEVELOPMENT.md
include/raytracer/: RayTracer.h
qml/: BlurLayer.qml  Main.qml
resources/qml/: Main.qml
resources/shaders/: pathtrace_vulkan.comp
src/app/: RayTracerFboItem.cpp  RayTracerFboItem.h  main.cpp
src/backends/: CudaPathTracer.cpp  CudaPathTracer.h  CudaPathTracerKernel.cu  GpuPathTracer.cpp  GpuPathTracer.h
src/backends/vulkan/: VulkanPathTracer.cpp  VulkanPathTracer.h
src/legacy/: MainWindow.h  RenderWidget.cpp
tests/unit/: AabbTests.cpp  BvhTests.cpp  CameraTests.cpp  HitableListTests.cpp  MaterialTests.cpp  MathUtilsTests.cpp  RayTests.cpp  SphereTests.cpp  TestHelpers.h  Vec3Tests.cpp
tools/: spv_to_header.py
